code menu den noi bi tri

--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -25,7 +25,9 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href=""><h1>GYM<span>Z</span></h1></a>
+                    <a href="">
+                        <h1>GYM<span>Z</span></h1>
+                    </a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
@@ -61,13 +63,12 @@
                                 <a href="">GYM<span>Z</span></a>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a href="../index.html">TRANG CHỦ</a>
-                            <a href="./forum.html">DIỄN ĐÀN</a>
-                            <a href="#">DỊCH VỤ</a>
-                            <a href="./promotion.html">KHUYẾN MÃI</a>
-                            <a href="#">TẬP THỬ MIỄN PHÍ</a>
+                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
+                            <a href="./forum.html"><i class='bx bx-world' ></i>DIỄN ĐÀN</a>
+                            <a href="#"><i class='bx bxs-file' ></i>DỊCH VỤ</a>
+                            <a href="./promotion.html"><i class='bx bxs-purchase-tag' ></i>KHUYẾN MÃI</a>
+                            <a href="#"><i class='bx bx-code-alt' ></i>TẬP THỬ MIỄN PHÍ</a>
                         </div>
-                        
                     </div>
                 </div>
             </div>
