--- a/navigation/card.html
+++ b/navigation/card.html
@@ -52,7 +52,22 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <a href="#">MENU</a>
+                    <div class="menuroi">
+                        <a href="#">
+                            <i class='bx bx-menu' ></i>
+                        </a>
+                        <div class="noidung">
+                            <div class="logo">
+                                <a href="">GYM<span>Z</span></a>
+                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                            </div>
+                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
+                            <a href="./forum.html"><i class='bx bx-world' ></i>DIỄN ĐÀN</a>
+                            <a href="#"><i class='bx bxs-file' ></i>DỊCH VỤ</a>
+                            <a href="./promotion.html"><i class='bx bxs-purchase-tag' ></i>KHUYẾN MÃI</a>
+                            <a href="#"><i class='bx bx-code-alt' ></i>TẬP THỬ MIỄN PHÍ</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -111,7 +126,10 @@
 
         </div>
     </div>
+    <!-- overlay -->
+    <div class="nen_mo"></div>
     <script src="./index.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
