--- a/navigation/forum.html
+++ b/navigation/forum.html
@@ -61,11 +61,15 @@
                             <i class='bx bx-menu' ></i>
                         </a>
                         <div class="noidung">
-                            <a href="../index.html">TRANG CHỦ</a>
-                            <a href="./forum.html">DIỄN ĐÀN</a>
-                            <a href="#">DỊCH VỤ</a>
-                            <a href="./promotion.html">KHUYẾN MÃI</a>
-                            <a href="#">TẬP THỬ MIỄN PHÍ</a>
+                            <div class="logo">
+                                <a href="">GYM<span>Z</span></a>
+                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                            </div>
+                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
+                            <a href="./forum.html"><i class='bx bx-world' ></i>DIỄN ĐÀN</a>
+                            <a href="#"><i class='bx bxs-file' ></i>DỊCH VỤ</a>
+                            <a href="./promotion.html"><i class='bx bxs-purchase-tag' ></i>KHUYẾN MÃI</a>
+                            <a href="#"><i class='bx bx-code-alt' ></i>TẬP THỬ MIỄN PHÍ</a>
                         </div>
                     </div>
                 </div>
@@ -85,6 +89,8 @@
 
         </div>
     </div>
+    <!-- overlay -->
+    <div class="nen_mo"></div>
     <script src="./index.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
 </body>
