chat hoat dong ok

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                         CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày.
                     </p>
                     <div class="home__about__btn">
-                        <button class="home__about__btn__child">CALL NOW</button>
+                        <button class="home__about__btn__child">
+                            <a href="./navigation/chatbox.html" class="home__about__btn__child__link">CALL NOW</a>
+                        </button>
                     </div>
 
                 </div>
