--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -93,6 +93,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="footer">
             <div class="footer__select">
                 <div class="footer__colum1">
@@ -107,17 +108,18 @@
                         <div class="about__us__inner">
                             <div class="about__address">
                                 <a href="#">
-                                        <m><i class='bx bxs-home'></i></m> Trụ sở chính: z115, Tân Thịnh, TP.Thái Nguyên, Thái Nguyên 
+                                    <m><i class='bx bxs-home'></i></m> Trụ sở chính: z115, Tân Thịnh, TP.Thái
+                                    Nguyên, Thái Nguyên
                                 </a>
                             </div>
                             <div class="about__hotline">
                                 <a href="#">
-                                    <m><i class='bx bxs-phone' ></i></m> Hotline: 0999.999.999
+                                    <m><i class='bx bxs-phone'></i></m> Hotline: 0999.999.999
                                 </a>
                             </div>
                             <div class="about__email">
                                 <a href="#">
-                                    <m><i class='bx bxs-envelope' ></i></m> Email: closeai.work@gmail.com
+                                    <m><i class='bx bxs-envelope'></i></m> Email: closeai.work@gmail.com
                                 </a>
                             </div>
                             <div class="about__website">
@@ -126,16 +128,16 @@
                                 </a>
                             </div>
                         </div>
-    
+
                     </div>
                     <div class="service__customer">
                         <div class="service__customer__title">
                             <div class="footer__colum1__inner">
                                 <a href="#">
-                                <h3>
-                                    DỊCH VỤ KHÁCH HÀNG
-                                </h3>
-                            </a>
+                                    <h3>
+                                        DỊCH VỤ KHÁCH HÀNG
+                                    </h3>
+                                </a>
                             </div>
                         </div>
                         <div class="service__customer__list">
@@ -144,10 +146,10 @@
                                     <i class='bx bx-file'></i> Điều khoản sử dụng
                                 </a>
                                 <a href="#">
-                                    <i class='bx bxs-lock-alt' ></i> Chính sách bảo mật
+                                    <i class='bx bxs-lock-alt'></i> Chính sách bảo mật
                                 </a>
                                 <a href="#">
-                                    <i class='bx bxs-chat' ></i> Kết nối với chúng tôi
+                                    <i class='bx bxs-chat'></i> Kết nối với chúng tôi
                                 </a>
                             </div>
                         </div>
@@ -170,12 +172,12 @@
                                 </div>
                                 <div class="folow__page">
                                     <a href="#">
-                                        <i class='bx bxl-facebook-square' ></i>Theo dõi fanpage
+                                        <i class='bx bxl-facebook-square'></i>Theo dõi fanpage
                                     </a>
                                 </div>
                                 <div class="share__page">
                                     <a href="#">
-                                        <i class='bx bxs-share' ></i>Chia sẻ
+                                        <i class='bx bxs-share'></i>Chia sẻ
                                     </a>
                                 </div>
                             </div>
@@ -186,8 +188,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer__last">
+            <div class="footer__last">
                 <div class="footer__last__select">
                     <div class="footer__last__select__inner">
                         <a href="#">
@@ -195,6 +196,7 @@
                         </a>
                     </div>
                 </div>
+            </div>
         </div>
     </div> 
     <!-- overlay -->
