--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </p>
                     <div class="home__about__btn">
                         <button class="home__about__btn__child">
-                            <a href="./navigation/chatbox.html" class="home__about__btn__child__link">CALL NOW</a>
+                            <a href="./navigation/chatbox.html" class="home__about__btn__child__link">LIÊN HỆ NGAY</a>
                         </button>
                     </div>
 
