--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <a href="#">DỊCH VỤ<i class='bx bxs-right-arrow'></i></a>
                                 <div class="containt">
                                     <a href="#">THẺ HỘI VIÊN</a>
-                                    <a href="#">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./navigation/coach.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./navigation/chatbox.html">CHAT ONLINE</a>
                                     <a href="./navigation/test.html">TEST</a>
