--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -36,7 +36,7 @@
                         <li><a href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
+                                <a class="header__inner__navigation__sevice" href="#">DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m></a>
                                 <div class="containt">
                                     <a href="#">THẺ HỘI VIÊN</a>
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
