--- a/navigation/card.html
+++ b/navigation/card.html
@@ -74,14 +74,14 @@
         <div class="container">
             <img src="https://www.elleman.vn/app/uploads/2019/03/11/bai-tap-gym-ELLE-Man-feature.jpg" alt="ảnh body 6 múiii">
             <div class="container--feature">
-                    <div class="container-item">
+                    <div class="container-card">
                         <div class=" button-icon">
                             <div class="cube">
                               <span class="side front">Beginner</span>
-                              <span class="side top">300.000đ/tháng</span>
+                              <span class="side top"><a href="../navigation/login.html">300.000đ/tháng</a></span>
                             </div>
                         </div>
-                        <div class="container-item--list">
+                        <div class="container-card--list">
                         <ul>
                             <li>Không giới hạn thời gian</li>
                             <li>Được sử dụng tất cả các dụng cụ</li>
@@ -89,14 +89,14 @@
                         </ul>
                         </div>
                     </div>
-                    <div class="container-item">
+                    <div class="container-card">
                         <div class=" button-icon">
                             <div class="cube">
                               <span class="side front">Basic</span>
-                              <span class="side top">500.000đ/tháng</span>
+                              <span class="side top"><a href="../navigation/login.html">500.000đ/tháng </a></span>
                             </div>
                         </div>
-                        <div class="container-item--list">
+                        <div class="container-card--list">
                             <ul>
                                 <li>Được dẫn một bạn bè đi cùng</li>
                                 <li>Được sử dụng các dịch vụ sau tập</li>
@@ -104,14 +104,14 @@
                             </ul>
                             </div>
                     </div>
-                    <div class="container-item">
+                    <div class="container-card">
                         <div class="button-icon">
                             <div class="cube">
                               <span class="side front">Advence</span>
-                              <span class="side top">700.000đ/tháng</span>
+                              <span class="side top"><a href="../navigation/login.html">700.000đ/tháng</a></span>
                             </div>
                         </div>
-                        <div class="container-item--list">
+                        <div class="container-card--list">
                             <ul>
                                 <li>Có PT riêng</li>
                                 <li>Được tặng khăn và quần áo tập</li>
