edit het ban tum lum v3

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/tu.css">
     <link rel="stylesheet" href="./css/van.css">
     <link rel="stylesheet" href="./css/quyen.css">
+    <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
 
 
@@ -393,8 +394,8 @@
             </div>
         </div>
     </div>
-
-
+    <!-- overlay -->
+    <div class="nen_mo"></div>
     <script src="./index.js"></script>
     <script src="./navigation_javascript/menu.js"></script>
 </body>
