--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;900&display=swap"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
+    <!-- <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css"> -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/truong.css">
     <link rel="stylesheet" href="../navigation_css/promotion.css">
@@ -193,7 +193,7 @@
     </div> 
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menu.js"></script>
 </body>
 
