--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
                             <a href="./index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
-                            <a href="./navigation/forum.html"><i class='bx bx-world'></i>DIỄN ĐÀN</a>
+                            <a href="./navigation/shop.html"><i class='bx bx-world'></i>DIỄN ĐÀN</a>
                             <a href="#"><i class='bx bxs-file'></i>DỊCH VỤ</a>
                             <a href="./navigation/promotion.html"><i class='bx bxs-purchase-tag'></i>KHUYẾN MÃI</a>
                             <a href="#"><i class='bx bx-code-alt'></i>TẬP THỬ MIỄN PHÍ</a>
