reactjs shop information

--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../navigation_css/shop.css">
     <link rel="stylesheet" href="../navigation_css/End_shoprtien.css">
+    <link rel="stylesheet" href="../navigation_css/informationItem.css">
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
