--- a/navigation/login.html
+++ b/navigation/login.html
@@ -79,16 +79,15 @@
             <form class="form">
                 <p id="heading">Login</p>
                 <div class="field">
-                    <!-- <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                        <rect x="45" y="20" width="10" height="60"/>
-                        <rect x="20" y="45" width="60" height="10"/>
-                    </svg> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" fill="currentColor" viewBox="0 0 448 512">
+                        <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>
+                    </svg>
                   <input autocomplete="off" placeholder="Phone" class="input-field" type="tel">
                 </div>
                 <div class="field">
-                <!-- <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"></path>
-                </svg> -->
+                </svg>
                   <input placeholder="Password" class="input-field" type="password">
                 </div>
                 <div class="btn">
