--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -115,29 +115,29 @@
                     <div class="container__main">
                         <div class="container__pictures">
                             <div class="container__pictures_big">
-                                <img src="//vn-live-05.slatic.net/p/3ba36c0713483428e20128870fe4443b.jpg_720x720q80.jpg_.webp"
-                                    alt="#" class="container__pictures_big__img">
+                                <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg" alt="#"
+                                    class="container__pictures_big__img">
                             </div>
                             <div class="container__pictures_other">
                                 <ul class="container__pictures_other__list">
                                     <li class="container__pictures_other__item">
-                                        <img src="//vn-live-05.slatic.net/p/8e69ff4fb8d16f056a940d024c5437d8.jpg_120x120q80.jpg_.webp"
+                                        <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
                                             alt="#" class="container__pictures_other__img">
                                     </li>
                                     <li class="container__pictures_other__item">
-                                        <img src="//vn-live-05.slatic.net/p/8e69ff4fb8d16f056a940d024c5437d8.jpg_120x120q80.jpg_.webp"
+                                        <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
                                             alt="#" class="container__pictures_other__img">
                                     </li>
                                     <li class="container__pictures_other__item">
-                                        <img src="//vn-live-05.slatic.net/p/8e69ff4fb8d16f056a940d024c5437d8.jpg_120x120q80.jpg_.webp"
+                                        <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
                                             alt="#" class="container__pictures_other__img">
                                     </li>
                                     <li class="container__pictures_other__item">
-                                        <img src="//vn-live-05.slatic.net/p/8e69ff4fb8d16f056a940d024c5437d8.jpg_120x120q80.jpg_.webp"
+                                        <img src="../img/equipment/10_Foam_Roller/310_Foam_Roller.jpg"
                                             alt="#" class="container__pictures_other__img">
                                     </li>
                                     <li class="container__pictures_other__item">
-                                        <img src="//vn-live-05.slatic.net/p/8e69ff4fb8d16f056a940d024c5437d8.jpg_120x120q80.jpg_.webp"
+                                        <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
                                             alt="#" class="container__pictures_other__img">
                                     </li>
                                 </ul>
@@ -146,17 +146,15 @@
                         <div class="container__product">
                             <div class="product__detail">
                                 <div class="product__detail__flash">
-                                    <div class="product__detail__flash__time">
+                                    <!-- <div class="product__detail__flash__time">
                                         <span class="product__detail__flash__time__text">Kết thúc sau</span>
                                         <span class="product__detail__flash__time__real">09:17:37</span>
-                                    </div>
+                                    </div> -->
                                     <span class="product__detail__flash__buy">3 đã bán</span>
                                 </div>
                                 <div class="product__detail__wrapper">
-                                    <h1 class="product__detail__title">Vỏ bọc 3 tấm ze Valire đủ kích thước nhiều màu vỏ
-                                        bọc
-                                        nệm
-                                        bảo vệ nệm- vỏ giao màu ngẫu nhiên</h1>
+                                    <h1 class="product__detail__wrapper__title">Optimum Nutrition Gold Standard 100%
+                                        Whey</h1>
                                 </div>
                                 <div class="product__detail__review">
                                     <div class="product__detail__review__star">
@@ -178,86 +176,137 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <span class="product__detail__review__text">458 Đánh giá</span>
+                                    <span class="product__detail__review__text">850 Đánh giá</span>
 
                                 </div>
                                 <div class="product__detail__band">
                                     <div class="product__detail__band__name">Thương hiệu : </div>
-                                    <a href="#" class="product__detail__band__link">Không có thương hiệu</a>
+                                    <a href="#" class="product__detail__band__link">Optimum Nutrition</a>
                                 </div>
                                 <div class="product__detail__price">
-                                    <span class="product__detail__price__mormal">₫70,798</span>
+                                    <span class="product__detail__price__mormal">₫900,000</span>
                                     <div class="origin-block">
-                                        <span class="product__detail__price__discount">-41%</span>
-                                        <span class="product__detail__price__deteted">₫121.000</span>
+                                        <span class="product__detail__price__discount">-15%</span>
+                                        <span class="product__detail__price__deteted">₫765,000</span>
                                     </div>
                                 </div>
+                                <div class="product__detail__status">
+                                    <span class="product__detail__title">
+                                        Trạng thái:
+                                    </span>
+                                    <span class="product__detail__text">
+                                        Hàng có sẵn
+                                    </span>
+                                </div>
+                                <div class="product__detail__time-use">
+                                    <span class="product__detail__time-use__title">
+                                        Hạn sử dụng:
+                                    </span>
+                                    <span class="product__detail__time-use__text">08/2024</span>
+                                </div>
                                 <div class="product__detail__promotion">
-                                    <h6 class="product__detail__promotion__title">Khuyến mãi</h6>
+                                    <!-- <h6 class="product__detail__promotion__title">Khuyến mãi</h6> -->
                                     <div class="product__detail__promotion__tag">
                                         <ul class="product__detail__promotion__tag__list">
                                             <li class="product__detail__promotion__tag__item">
-                                                <span class="product__detail__promotion__tag__name">🔥MUA MỘT TẶNG MỘT TÍNH TIỀN HAiiiiiiiiiiiiiiii🔥</span>
+                                                <span class="product__detail__promotion__tag__name">Không mùi, không
+                                                    ngọt</span>
                                             </li>
                                             <li class="product__detail__promotion__tag__item">
-                                                <span class="product__detail__promotion__tag__name">🔥MUA MỘT TẶNG MỘT TÍNH TIỀN HAI🔥</span>
+                                                <span class="product__detail__promotion__tag__name">Hỗ trợ tăng cân hiệu
+                                                    quả</span>
                                             </li>
                                             <li class="product__detail__promotion__tag__item">
-                                                <span class="product__detail__promotion__tag__name">🔥MUA MỘT TẶNG MỘT TÍNH TIỀN HAI🔥</span>
+                                                <span class="product__detail__promotion__tag__name">Có thể kết hợp với
+                                                    whey để tăng thêm năng lượng</span>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__delivery">
-                                <span class="product__delivery__head">Tùy chọn giao hàng</span>
-                                <div class="product__delivery__local">
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <span>
-                                        Thái Nguyên, z115, Tân Thịnh, TP.Thái Nguyên
-                                    </span>
+                            <div class="product__bar">
+                                <div class="product__delivery">
+                                    <span class="product__delivery__head">Tùy chọn giao hàng</span>
+                                    <div class="product__delivery__local">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <span>
+                                            Thái Nguyên, z115, Tân Thịnh, TP.Thái Nguyên
+                                        </span>
+                                    </div>
+                                    <div class="product__delivery__chat">
+                                        <i class="fa-solid fa-message"></i>
+                                        <a href="../navigation/chatbox.html">Trò chuyện</a>
+                                    </div>
                                 </div>
-                                <div class="product__delivery__chat">
-                                    <i class="fa-solid fa-message"></i>
-                                    <a href="../navigation/chatbox.html">Trò chuyện</a>
+                                <div class="product__delivery__ingredient">
+                                    <h5 class="product__delivery__ingredient__title">BẢNG THÀNH PHẦN</h5>
+                                    <div class="product__delivery__ingredient__table">
+                                        <div class="product__delivery__ingredient__box">
+                                            <p>Serving Size: 5g (1 teaspoon)</p>
+                                            <p>Servings Per Container: 80</p>
+                                        </div>
+                                        <div class="product__delivery__ingredient__box ">
+                                            <div class="product__delivery__ingredient__box--flex">
+                                                <p>Amount Per Serving</p>
+                                                <p>5g †</p>
+                                            </div>
+                                        </div>
+                                        <div class="product__delivery__ingredient__box">
+                                            <p>Creatine Monohydrate</p>
+                                        </div>
+                                        <div class="product__delivery__ingredient__box">
+                                            <p>* % Daily Value is based on a 2,000 calorie diet. Your daily values may
+                                                be higher or lower based on your calorie needs.
+                                                † Daily Value (DV) not established.</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="container__more">
-                        <h5 class="container__more__title">
-                            Vỏ bọc 3 tấm ze Valire đủ kích thước nhiều màu vỏ bọc nệm bảo vệ nệm- vỏ giao màu ngẫu nhiên
-                        </h5>
-                        <p class="container__more__text">Vỏ Vải bọc bông ép 3 mảnh tiện dụng
-                            Vỏ gấm bọc cho đệm 3 tấm vừa đủ kích thước
-                            vỏ bọc đệm cũ, bị rách, vón
-                            Đã có vỏ gấm cấp cao thay thế rồi ạ
-                            Đủ các kích thước 1m2 - 1m5 - 1m6 - 1m8 -2m
-                            Với độ dày: 5 phân - 7 phân - 9 phân
-                            Khách yêu lưu ý em giao mẫu ngẫu nhiên, vì mỗi lô về màu khác nhau ạ
-                            khách lưu ý đây là vỏ bọc đệm không phải đệm khách nhé!
-                            hoa văn đẹp không sổ lông
-                            Những chiếc đệm còn mới mà vỏ đệm đã bị rách hoăc không thể bị đập;
-                            -Không muốn mua một miếng đệm mới mà vỏ dệm cũ đã quá cũ;
-                            Vậy giải pháp cho bạn là thay áo mới cho đệm thôi ạ
-                            Chất liệu: vải Valize
-                            #vodem #vonem</p>
+                        <h5 class="container__more__title">MÔ TẢ SẢN PHẨM</h5>
+                        <p class="container__more__text">Maltodextrin là một loại bột màu trắng thường được làm từ tinh
+                            bột, lúa mì, ngô hoặc gạo. Để tạo ra maltodextrin, các loại tinh bột này được nấu chín và
+                            chia nhỏ để tạo ra một loại bột hòa tan trong nước có vị trung tính. Cơ thể bạn có thể tiêu
+                            hóa maltodextrin rất nhanh, vì vậy nó thường được sử dụng để cung cấp năng lượng nhanh
+                            chóng. 100% Maltodextrin Carbs của chúng tôi được làm từ tinh bột, cung cấp lượng carbs vừa
+                            giải phóng nhanh vừa tiêu hóa nhanh – lý tưởng cho cả trước và sau khi tập luyện để cung cấp
+                            năng lượng cho phiên của bạn cũng như nạp năng lượng sau đó.</p>
                     </div>
-                    <!-- <div class="container__evaluate">
-                    <h6 class="container__evaluate__title">Đánh giá và nhận xét của Vỏ bọc đệm 3 tấm ze Valire đủ kích thước nhiều màu vỏ bọc đệm bảo vệ nệm- vỏ giao màu ngẫu nhiên</h6>
-                    <div class="container__evaluate__box">
-                        <div class="evaluate__left">
-                            <div class="evaluate__left__score">
-                                <span class="evaluate__score__average">4,6</span>
-                                <span class="evaluate__score__max">/5</span>
-                            </div>
-                            <div class="evaluate__left__star">
+                    <div class="container__message">
+                        <div class="container__message__notification">
+                            <ul class="container__message__notification__list">
+                                <li class="container__message__notification__item">
+                                    <span>
+                                        Thông tin này chỉ mang tính chất trợ giúp người đọc hiểu hơn về sản phẩm, không
+                                        nhằm
+                                        mục đích quảng cáo.</span>
 
-                            </div>
+                                </li>
+                                <li class="container__message__notification__item">
+                                    <span>
+                                        Sản phẩm này không phải là thuốc và không có tác dụng thay thế thuốc chữa bệnh.
+                                    </span>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="evaluate__right"></div>
+                        <div class="container__message__use">
+                            <h5 class="container__message__title">
+                                Hướng dẫn sử dụng:
+                            </h5>
+                            <p class="container__message__text">Lấy 1 muỗng (5g) hòa tan trong 240ml nước hoặc đồ
+                                uống yêu thích của bạn. Tiêu thụ sau khi tập luyện của bạn.</p>
+                        </div>
+                        <div class="container__message__warring">
+                            <h5 class="container__message__title">
+                                Lưu ý:
+                            </h5>
+                            <p class="container__message__text">Không được sử dụng bởi những người có bệnh lí từ
+                                trước, những người dùng bất kỳ loại thuốc nào, những người dưới 18 tuổi hoặc tham khảo ý
+                                kiến bác sĩ trước khi sử dụng. Tránh xa tầm tay trẻ em và vật nuôi.</p>
+                        </div>
                     </div>
-                </div> -->
                 </div>
             </div>
         </div>
